--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                 </table>
             </div>
      
-
-TEXTO DO SEGUNDO ANUNCIO
-
-<subtitulo> Mais de 20.000 pessoas confiam na Spark! Seja um deles você também!
-<link> TABELA DE PREÇOS
+<div class="primeiro-anuncio">
+    
+     <h3>Mais de 20.000 pessoas confiam na Spark! Seja um deles você também!</h3>
+     <a href="" class="btn-preços">TABELA DE PREÇOS</a>
+</div>
 
 TEXTO DO RODAPÉ
 
