--- a/index.html
+++ b/index.html
@@ -167,18 +167,8 @@
 </div>
 </footer>
 
-    <script>
-        function menuShow() {
-    let menuMobile = document.querySelector('.mobile-menu');
-    if (menuMobile.classList.contains('open')) {
-        menuMobile.classList.remove('open');
-        document.querySelector('.icon').src = "assets/menu.png";
-    } else {
-        menuMobile.classList.add('open');
-        document.querySelector('.icon').src = "assets/close.png";
-    }
-}
-    </script>
+   
+    <script src="index.JS"></script>
 
     
 </body>
